--- a/db.json5
+++ b/db.json5
@@ -1,8 +1,17 @@
 {
-  "posts": [
-    { "id": "1", "title": "a title", "views": 100 },
-    { "id": "2", "title": "another title", "views": 200 }
-  ],
+  "loginCredencial": {
+    "email": "manu1@gmail.com",
+    "password": "m@nu!123"
+  },
+  
+  "signup":{
+    "email": "",
+    "password": "",
+    "username":"",
+    "language":null,
+    "gender":null,
+  },
+
   "comments": [
     { "id": "1", "text": "a comment about post 1", "postId": "1" },
     { "id": "2", "text": "another comment about post 1", "postId": "1" }
